--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,21 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
+
+{plugins, [
+    {rebar3_hex, "7.0.6"}
+]}.
+
+{profiles, [
+    {test, [{deps, []}]}
+]}.
+
+{hex, [
+    {description, "Keep your socks dry. An Ultra-simple HTTP server."},
+    {licenses, ["Apache-2.0"]},
+    {links, [
+        {"GitHub", "https://github.com/Green-Mice/wade"},
+        {"Hex.pm", "https://hex.pm/packages/wade"}
+    ]},
+    {maintainers, ["Steve Roques<steve.roques@gmail.com>,Jeremie Suzan<jsz4n@ik.me>"]},
+    {doc, #{provider => edoc}}
+]}.
